--- a/indexuk.html
+++ b/indexuk.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang="en" prefix="og: https://ogp.me/ns#">
+﻿<!DOCTYPE html>
+<html lang="uk" prefix="og: https://ogp.me/ns#">
     <head>
         <meta charset="UTF-8">
         <title>Orest Shuplat</title>
@@ -7,16 +7,15 @@
         <link rel="stylesheet" type="text/css" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
         <link rel="stylesheet" type="text/css" href="css/animation.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
-        <link rel="stylesheet" type="text/css" href="textrotator/simpletextrotator.css" >
+        <link rel="stylesheet" type="text/css" href="textrotator/simpletextrotator.css">
         <link rel="stylesheet" type="text/css" href="css/dark-mode.css">
-        
         <script src="js/jquery.min.js"></script>
     </head>
     <body>
         <div id="particles-js">
             <main>
                 <article>
-                    <div class="page" style="border-color: black;">
+                    <div class="page"  style="border-color: black;">
                         <div class="stackable grid">
                             <div class="row">
                                 <div class="three wide center aligned column">
@@ -28,7 +27,7 @@
                                     <div class="stackable grid">
                                         <div class="sixteen wide column">
                                             <h1 class="name" id="companionMethods">-</h1>
-                                            <div class="col-md-4 rd_txt">
+                                             <div class="col-md-4 rd_txt">
                                                 <h1 class="rott">
                                                     <span id="rotate">
                                                         <span class="believer-text">Believer</span>
@@ -93,8 +92,8 @@
                                             <div class="divider"></div>
                                         </div>
                                         <div class="sixteen wide column">
-                                            <h2>Résumé</h2>
-                                            <p>&mdash; Hello! I’m studying to be skilled frontend developer with 1 year of practice in UI/UX design, application development, and database modeling. I strive to craft precise, responsive, fast, easy-to-use environments with both strong purpose and great looks.</p>
+                                            <h2>Резюме</h2>
+                                            <p>&mdash; Привіт! Я вчусь на фронтенд розробника, маючи 1 рік практики в UI/UX дизайні, розробці аплікацій, і моделюванні баз даних. Я намагаюсь будувати точні, адаптивні, швидкі, зручні в користуванні середовища, які гарно виглядають та добре виконують свої завдання.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -106,36 +105,36 @@
                             </div>
                             <div class="row">
                                 <div class="ten wide column">
-                                    <h3>Experience</h3>
-                                    <h6>Recent</h6>
+                                    <h3>Досвід</h3>
+                                    <h6>Тепер</h6>
                                     <ul class="timeline">
                                         <li>
-                                            <p><em>10<sup>th</sup> December 2019</em></p>
-                                            <p>Won in tech start-up competitions with my teams and get 25 000UAN for start-up development</p>
+                                            <p><em>10<sup>го</sup> грудня 2019</em></p>
+                                            <p>Виграли з командою в стартап-конкурсі і отримали 25 000грн на розробку проекту</p>
                                         </li>
                                     </ul>
-                                    <h6>Back then</h6>
+                                    <h6>Тоді</h6>
                                     <ul class="timeline">
                                         <li>
-                                            <p><em>1<sup>st</sup> August 2019 - 30<sup>st</sup> June 2023</em></p>
-                                            <p><strong>Studying</strong> at <strong>Lviv Polytechnic University in <a href="http://iot.lviv.ua/">Internet of Things</a></strong> programm</p>
+                                            <p><em>1<sup>го</sup> серпня 2019 - 30<sup>те</sup> червня 2023</em></p>
+                                            <p><strong>Навчаюсь</strong> в <strong>Львівському політехнічному університеті на програмі<a href="http://iot.lviv.ua/"> Інтернет речей</a></strong></p>
                                             <ul>
-                                                <li>learnt basics of OOP in C++</li>
-                                                <li>learnt Java OOP programming</li>
-                                                <li>learnt how to built REST services using MySQL and Spring</li>
-                                                <li>learnt Python development and practical using</li>
-                                                <li>Took a part of <strong><a href="http://visiti.pythonanywhere.com/">Visiti</a></strong> team building cool touristic application</li>
+                                                <li>вивчав основи ООП в C++</li>
+                                                <li>вивчав Java OОП програмування</li>
+                                                <li>вивчав як розробити REST сервіс використовуючи MySQL і Spring</li>
+                                                <li>вивчав Python озробку і практичне використання</li>
+                                                <li>Брав участь в <strong><a href="http://visiti.pythonanywhere.com/">Visiti</a></strong> команді, розробляючи туристичну аплікацію</li>
                                             </ul>
                                         </li>
                                         <li class="details">
                                             <input type="checkbox" id="other">
-                                            <label for="other" class="summary">I also do some other things from time to time</label>
+                                            <label for="other" class="summary">Я також деколи займаюсь іншими речима</label>
                                             <div>
                                                 <ul>
-                                                    <li>code a lot</li>
-                                                    <li>and debugging a lot too(</li>
-                                                    <li>take a part of all available courses</li>
-                                                    <li>try working on freelance platform</li>
+                                                    <li>коджу багато</li>
+                                                    <li>і дебажу також багато(</li>
+                                                    <li>беру участь у всіх доступних курсах</li>
+                                                    <li>пробую працювати на фріланс платформі</li>
                                                 </ul>
                                             </div>
                                         </li>
@@ -143,43 +142,43 @@
                                 </div>
                                 <div class="six wide column">
                                     <section>
-                                        <h3>Languages</h3>
-                                        <p class="tags small"><a href="indexuk.html" hreflang="uk" rel="alternate" class="language" lang="uk"><span>УКРАЇНСЬКА</span></a>   |   <span class="language" lang="en">ENGLISH</span></p>
+                                        <h3>МОВИ</h3>
+                                        <p class="tags small"><span>УКРАЇНСЬКА</span>   |   <a href="index.html" hreflang="en" rel="alternate" class="language" lang="en"><span>ENGLISH</span></a></p>
                                     </section>
                                     <section>
-                                        <h3>Skills</h3>
+                                        <h3>Навички</h3>
                                         <p class="tags small">HTML CSS JS BOOTSTRAP JAVA SPRING PYTHON <span class="nowrap">MICROSOFT OFFICE</span> PHOTOSHOP WINDOWS MACOS MYSQL POSTGRESQL MICROSOFT SQL</p>
                                     </section>
                                     <section>
-                                        <h3>Likes</h3>
+                                        <h3>ПОДОБАЄТЬСЯ</h3>
                                         <p class="tags small">SPORT MUSIC ROCK BOOKS HARRY POTTER GAME OF THRONES <span class="nowrap">ATTENTION TO DETAILS</span></p>
                                     </section>
                                     <section>
-                                        <h3>Education</h3>
+                                        <h3>Освіта</h3>
                                         <ul class="timeline">
                                             <li>
-                                                <div><em>Every day</em></div>
+                                                <div><em>Кожен день</em></div>
                                                 <p class="tags bulleted">
                                                     <span class="tag"><a href="https://frontendfront.com/" rel="external"><strong>Front-End Front</strong></a></span><span class="tag"><strong>JAVA</strong></span><span class="tag"><strong>GYM</strong></span><span class="tag"><strong>READING</strong></span>
                                                 </p>
                                             </li>
                                             <li>
-                                                <div><em>September 2019</em></div>
-                                                <div><strong>Start Studying</strong> in Iot(computer science program) at <a href="http://iot.lviv.ua/" rel="external"><strong>Lviv Polytehnic University</strong></a></div>
+                                                <div><em>вересень 2019</em></div>
+                                                <div><strong>Почав навчатись</strong> на Інтернеті речей в <a href="http://iot.lviv.ua/" rel="external"><strong>Львівському політехнічному університеті</strong></a></div>
                                             </li>
                                             <li>
-                                                <div><em>September 2018 - January 2020 </em></div>
-                                                <div><strong>Englih courses(B1-C1)</strong> at <a href="https://greenforest.com.ua/"><strong>GreenForest</strong></a></div>
+                                                <div><em>вересень 2018 - січень 2020 </em></div>
+                                                <div><strong>Англійські курси(B1-C1)</strong> at <a href="https://greenforest.com.ua/"><strong>GreenForest</strong></a></div>
                                             </li>
                                             <li>
-                                                <div><em>1<sup>st</sup> September 2007 30<sup>th</sup> June 2018</em></div>
-                                                <div><strong>Certificate of graduation</strong> at <strong>№42 Middle School of General Education</strong></div>
+                                                <div><em>1<sup>st</sup> вересень 2007 30<sup>th</sup> червень 2018</em></div>
+                                                <div><strong>Атестат про повну загальну середню освіту</strong> у<strong> середній загальноосвітній школі №42</strong></div>
                                             </li>
                                         </ul>
                                     </section>
                                     <section>
-                                        <h3>Articles</h3>
-                                        <p>None published <sup><em>yet</em></sup></p>
+                                        <h3>СТАТТІ</h3>
+                                        <p>Жодна не опублікована <sup><em>поки що</em></sup></p>
                                         <div class="custom-control custom-switch">
                                             <input type="checkbox" class="custom-control-input" id="darkSwitch" />
                                             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
@@ -240,13 +239,13 @@
                 speed:50,
                 waitUntilVisible: true
                 })
-                .type("orest",  {delay: 1500})
+                .type("oрест",  {delay: 1500})
                 .move(-5)
-                .delete(1)
                 .move('END',  {delay: 1500})
-                .type(" Shplat",  {delay: 1500})
+                .type(" Шплат",  {delay: 1500})
                 .move(-4)
-                .type('u')
+                .delete(1)
+                .type('у')
                 .move('END',  {delay: 3000})
                 .type(' ;)',  {delay: 3000})
                 .pause(300)
